# arkui-x-deepwiki-250904

app_framework/ability/ability_runtime/: ability_runtime.gni
app_framework/arkui/uicontent/: declarative_module_preloader.h
app_framework/graphic_surface/surface/include/cross_platform/: external_window.h
app_framework/graphic_surface/surface/src/cross_platform/: native_window.cpp
app_framework/resource_management/interfaces/js/innerkits/core/: libresmgr_napi_core.versionscript
app_framework/resource_management/interfaces/native/resource/: librawfile.ndk.json
app_framework/window_manager/: window_manager.gni
app_framework/window_manager/interfaces/innerkits/wm/: window_stage.h
app_framework/window_manager/interfaces/kits/napi/display_runtime/: js_display_listener.cpp  (+1 more)
app_framework/window_manager/wm/src/: window_stage.cpp
arkui_for_android/.github/ISSUE_TEMPLATE/: default.md
arkui_for_android/entrance/java/jni/: display_info.h  display_info_jni.cpp  display_info_jni.h  download_manager_jni.cpp  download_manager_jni.h  jni_app_mode_config.cpp  jni_app_mode_config.h  mmi_event_convertor.cpp  mmi_event_convertor.h  subwindow_manager_jni.cpp  subwindow_manager_jni.h
arkui_for_android/osal/: package_event_proxy_android.cpp  system_bar_style_ohos.cpp
arkui_for_android/osal/fonts/: hwsymbol.xml
arkui_for_android/stage/ability/java/src/: SubWindow.java  SubWindowManager.java
arkui_for_ios/capability/bridge/: BridgeManagerHolder.mm
arkui_for_ios/capability/web/: AceWebMessageExtImpl.h
arkui_for_ios/entrance/: display_info.h  display_manager_agent.h  touch_event.cpp
arkui_for_ios/entrance/plugin_lifecycle/: ArkUIXPluginRegistry.h  ArkUIXPluginRegistry.mm  IArkUIXPlugin.h  IPluginRegistry.h  PluginContext.h  PluginContext.mm
arkui_for_ios/osal/: layout_inspector.cpp  ressched_report.cpp  system_bar_style_ohos.cpp
build_plugins/: .gitignore  LICENSE  OAT.xml  README.en.md  README.md  prebuilts_download_config.json  version.gni
build_plugins/.github/: pull_request_template.md
build_plugins/app/: BUILD.gn  app.gni  compile_app.py
build_plugins/app/test/hello/: BUILD.gn
build_plugins/build_scripts/: apply_patch.py  arkui-x-build.patch  build.sh  patches-demo.json
build_plugins/config/: BUILD.gn
build_plugins/config/aosp/: BUILD.gn  abi.gni  config.gni  sdk.gni  sysroot.gni
build_plugins/config/ios/: BUILD.gn  ios_sdk.gni  ios_sdk.py  rules.gni
build_plugins/config/ios/framework/: Info.plist
build_plugins/config/ios/tools/: copy_info_plist.py  create_ios_framework.py  create_xcframework.py  install_framework_headers.py
build_plugins/sdk/: BUILD.gn  archive_unstripped_lib.py  arkui_cross_sdk_description_std.json  generate_all_types_sdk.py  parse_sdk_description.py  post_build.py  post_build.pydeps  prebuilt_sdk.py  sdk.gni  type_to_display_name.json
build_plugins/templates/common/: aosp_deps_handler.py
build_plugins/templates/java/: check_api.py  check_package.py  check_package.pydeps  combined_jars.py  combined_jars.pydeps  ijar.py  ijar.pydeps  internal_rules.gni  jar.py  javac.py  javac.pydeps  rules.gni  write_build_config.py  write_build_config.pydeps
build_plugins/templates/java/util/: __init__.py  build_utils.py  jar_info_utils.py  md5_check.py  pycache.py
build_plugins/toolchain/aosp/: BUILD.gn
build_plugins/toolchain/ios/: BUILD.gn  linker_driver.py
plugins/bluetooth/common/mock/: if_system_ability_manager.h  iservice_registry.h  isystem_ability_load_callback.h  isystem_ability_status_change.h  isystem_process_status_change.h  parameter.h  samgr_ipc_interface_code.h  service_registry.cpp  system_ability_definition.h  system_ability_load_callback_stub.cpp  system_ability_load_callback_stub.h  system_ability_on_demand_event.h  system_ability_status_change_stub.h
plugins/data/datasharepredicates/data_share/: datashare_predicates.cpp  datashare_predicates.h  datashare_predicates_def.h
plugins/file/fs/src/: create_stream.cpp  create_stream.h  fdopen_stream.cpp  fdopen_stream.h  listfile.cpp  listfile.h  read_text.cpp  read_text.h
plugins/file/fs/src/class_atomicFile/: atomicfile_n_exporter.cpp  atomicfile_n_exporter.h
plugins/file/photo_access_helper/ios/utils/: rdb_utils_result.cpp  rdb_utils_result.h
plugins/i18n/: I18N.h  i18n_addon.cpp
plugins/i18n/android/java/jni/: i18n_plugin_impl.cpp  i18n_plugin_impl.h  i18n_plugin_jni.cpp  i18n_plugin_jni.h
plugins/i18n/framework/: error_util.cpp  i18n_break_iterator.cpp  i18n_calendar.cpp  i18n_timezone.cpp  locale_config.cpp  locale_info.cpp  plural_rules.cpp  utils.cpp
plugins/i18n/include/: error_util.h  i18n_addon.h  i18n_break_iterator.h  i18n_calendar.h  icu_data.h  locale_config.h  locale_info.h  utils.h
plugins/i18n/ios/: i18n_plugin_impl.h  i18n_plugin_impl.mm
plugins/intl/: INTL.h  intl_addon.cpp
plugins/intl/android/java/: BUILD.gn
plugins/intl/android/java/jni/: intl_plugin_impl.cpp  intl_plugin_impl.h  intl_plugin_jni.cpp  intl_plugin_jni.h
plugins/intl/framework/: collator.cpp  date_time_format.cpp  icu_data.cpp  locale_config.cpp  locale_info.cpp  measure_data.cpp  number_format.cpp  plural_rules.cpp  relative_time_format.cpp  utils.cpp
plugins/intl/include/: collator.h  date_time_format.h  intl_addon.h  locale_config.h  measure_data.h  number_format.h  plural_rules.h  relative_time_format.h  utils.h
plugins/intl/ios/: BUILD.gn  intl_plugin.h  intl_plugin.m  intl_plugin_impl.h  intl_plugin_impl.mm
plugins/multimedia/audio/android/: audio_common_jni.cpp  audio_common_jni.h
plugins/net/http/ios/: http_ios_request.mm
plugins/security/cert/: cf.gni
plugins/system_date_time/: date_time_init.cpp  parameters.cpp  time_service_client.cpp
plugins/system_date_time/mock/: parameters.h  system_ability_definition.h  system_ability_status_change_stub.h
plugins/util/stream/: native_module_stream.cpp
plugins/web/webview/: napi_web_message_ext.cpp  napi_web_message_ext.h  web_message.h  web_message_ext.h  web_value.h  webview_javascript_async_work_callback.cpp  webview_javascript_async_work_callback.h
plugins/zlib/napi/: zlib_callback_info.h
(+46 files in other folders)
