# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# ArkUI-X version
declare_args() {
  arkuix_sdk_version = "6.0.0.55"
  arkuix_api_version = "22"

  # Release type, optional values: Betax, RCx...
  arkuix_release_type = "Canary1"
  arkuix_meta_version = "1.0.0"
  arkuix_platform_version = "4.0.0"
}

# ArkUI-X SDK version
declare_args() {
  arkuix_current_sdk_version = arkuix_sdk_version
}

# ArkUI-X NDK version
declare_args() {
  arkuix_current_ndk_version = arkuix_current_sdk_version
}
