# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/toolchain/toolchain.gni")

config("arkui_x_warning") {
  cflags = [
    "-Wno-error=implicit-int-float-conversion",
    "-Wno-error=implicit-fallthrough",
    "-Wno-error=sign-compare",
    "-Wno-error=c99-designator",
    "-Wno-error=anon-enum-enum-conversion",
    "-Wno-error=sizeof-array-div",
    "-Wno-error=deprecated-copy",
    "-Wno-error=return-stack-address",
    "-Wno-error=reserved-identifier",
    "-Wno-error=suggest-destructor-override",
    "-Wno-error=suggest-override",
    "-Wno-error=unused-but-set-variable",
    "-Wno-error=unused-but-set-parameter",
    "-Wno-error=option-ignored",
    "-mno-outline-atomics",
    "-Wno-deprecated-declarations",
  ]

  if (is_android && defined(use_android_clang) && use_android_clang) {
    cflags += [ "-Wno-error=implicit-float-conversion" ]
    cflags -= [
      "-Wno-error=implicit-int-float-conversion",
      "-Wno-error=c99-designator",
      "-Wno-error=anon-enum-enum-conversion",
      "-Wno-error=sizeof-array-div",
      "-Wno-error=deprecated-copy",
      "-mno-outline-atomics",
      "-Wno-error=reserved-identifier",
      "-Wno-error=suggest-destructor-override",
      "-Wno-error=suggest-override",
      "-Wno-error=unused-but-set-variable",
      "-Wno-error=unused-but-set-parameter",
    ]
  }
}
